feat(club): add section club

--- a/index.html
+++ b/index.html
@@ -21,7 +21,16 @@
           <button class="button header__button" type="button">Зарегистрироваться</button>
         </div>
       </header>
-      <main class="content"></main>
+      <main class="content">
+        <section class="club">
+          <div class="club__container">
+            <div class="club__icon">Клуб</div>
+            <h1 class="title">Правильные шахматы</h1>
+            <p class="subtitle">Приходите к нам, играть в шахматы! Сразитесь классическом поединке, блиц состязании и бою с гройсмейстером.</p>
+            <div class="club__chessboard"></div>
+          </div>
+        </section>
+      </main>
       <footer class="footer"></footer>
     </div>
   </body>
