feat(footer): add footer

--- a/index.html
+++ b/index.html
@@ -41,21 +41,21 @@
               <input class="slider__input slider__input_btn3" type="radio" name="team-switch" id="team-btn3" />
               <div class="slider__items">
                 <div class="cards">
-                  <div class="cards__card">
+                  <article class="cards__card">
                     <img src="./images/photo_1.jpg" alt="Андрей" class="cards__image" />
                     <p class="cards__name">Андрей</p>
                     <p class="cards__signature">Шахматист, писатель.</p>
-                  </div>
-                  <div class="cards__card">
+                  </article>
+                  <article class="cards__card">
                     <img src="./images/photo_2.jpg" alt="Никита" class="cards__image" />
                     <p class="cards__name">Никита</p>
                     <p class="cards__signature">Шахматист, кулинар.</p>
-                  </div>
-                  <div class="cards__card">
+                  </article>
+                  <article class="cards__card">
                     <img src="./images/photo_3.jpg" alt="Алексей" class="cards__image" />
                     <p class="cards__name">Алексей</p>
                     <p class="cards__signature">Шахматист, геймер.</p>
-                  </div>
+                  </article>
                 </div>
               </div>
               <div class="slider__switch">
@@ -83,15 +83,15 @@
               <input class="slider__input slider__input_btn3" type="radio" name="battle-switch" id="battle-btn3" />
               <div class="slider__items">
                 <div class="cards">
-                  <div class="cards__card">
+                  <article class="cards__card">
                     <img src="./images/photo_4.jpg" alt="Андрей" class="cards__image" />
-                  </div>
-                  <div class="cards__card">
+                  </article>
+                  <article class="cards__card">
                     <img src="./images/photo_5.jpg" alt="Никита" class="cards__image" />
-                  </div>
-                  <div class="cards__card">
+                  </article>
+                  <article class="cards__card">
                     <img src="./images/photo_6.jpg" alt="Алексей" class="cards__image" />
-                  </div>
+                  </article>
                 </div>
               </div>
               <div class="slider__switch">
@@ -104,7 +104,12 @@
           </div>
         </section>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <img class="footer__logo" src="./images/logo.svg" alt="логотип" />
+        <button class="button footer__button" type="button">Зарегистрироваться</button>
+        <p class="footer__paragraph">Шахматный клуб в Москве.</p>
+        <p class="footer__copy">© Chees Club.</p>
+      </footer>
     </div>
   </body>
 </html>
