--- a/index.html
+++ b/index.html
@@ -111,5 +111,15 @@
         <p class="footer__copy">© Chees Club.</p>
       </footer>
     </div>
+
+    <section class="popup popup_opened">
+      <img class="popup__logo" src="./images/logo.svg" alt="логотип" />
+      <h2 class="popup__title">Регистрация</h2>
+      <fieldset class="popup__user-info">
+        <input class="popup__form-item" type="text" name="user-name" placeholder="Имя" required />
+        <input class="popup__form-item" type="email" name="user-email" placeholder="Email" required />
+      </fieldset>
+      <button class="button popup__button" type="submit">Зарегистрироваться</button>
+    </section>
   </body>
 </html>
